# PathTracer

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Resources/: path_tracing.glsl
